fix: scrollbar
Scrollbar

--- a/src/discrete-layer/components/layer-details/entity-dialog.css
+++ b/src/discrete-layer/components/layer-details/entity-dialog.css
@@ -15,7 +15,7 @@
 }
 
 .content{
-  max-height: 800px;
+  max-height: 740px;
   padding-right: 20px;
 }
 
