--- a/src/discrete-layer/components/layer-details/ingestion-fields.css
+++ b/src/discrete-layer/components/layer-details/ingestion-fields.css
@@ -1,3 +1,7 @@
-.ingestionFieldsSpacer{
-  margin: 0 4px 0 16px;
+.directorySpacer{
+  margin: 0 4px 0 0;
+}
+
+.fileNamesSpacer{
+  margin: 0 4px 0 24px;
 }
